--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     # image: php:apache
     ports: 
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./php:/var/www/html
     depends_on:
@@ -15,6 +15,8 @@ services:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    env_file:
+      - .env
     environment: 
       MYSQL_ROOT_PASSWORD: passbird
       MYSQL_DATABASE: stckrql
@@ -24,8 +26,13 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
+    env_file:
+      - .env
     ports:
       - "8181:80"
     environment:
       PMA_HOST: mysql
       MYSQL_ROOT_PASSWORD: passbird
+
+
+
